# erpnext_custom_loan

./: .gitignore  BENCH_INSTALL.md  FRAPPE_CLOUD_INSTALL.md  GITHUB_SETUP.md  MANIFEST.in  README.md  __init__.py  hooks.py  push_to_github.bat  pyproject.toml  setup.py  test_erpnext15_compatibility.py  test_loan_calculations.py  validate_app_readiness.py
.github/: copilot-instructions.md
config/: desktop.py
custom_loan/: __init__.py  hooks.py  install.py  utils.py
custom_loan/doctype/interest_rate_slab/: interest_rate_slab.json  interest_rate_slab.py
custom_loan/doctype/interest_setting/: interest_setting.json  interest_setting.py
custom_loan/doctype/loan/: loan.json  loan.py
custom_loan/doctype/loan_application/: loan_application.json  loan_application.py
custom_loan/doctype/loan_customer/: loan_customer.json  loan_customer.py  test_loan_customer.py
custom_loan/doctype/loan_payment/: loan_payment.json  loan_payment.py
custom_loan/doctype/loan_repayment_schedule/: loan_repayment_schedule.json  loan_repayment_schedule.py
custom_loan/fixtures/: custom_role.json
custom_loan/public/: build.json
custom_loan/public/css/: custom_loan.css
custom_loan/public/js/: custom_loan.js
custom_loan/report/loan_portfolio_summary/: loan_portfolio_summary.json  loan_portfolio_summary.py
custom_loan/workspace/: __init__.py  loan_management.json
