[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_loan"
version = "0.1.0"
description = "NAYAG EDGE - Custom loan management system for ERPNext"
authors = [{name = "Chaklesh Yadav - NAYAG", email = "chaklesh@nayag.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "frappe>=15.0.0"
]

[project.urls]
Homepage = "https://edge.nayag.com"
Repository = "https://github.com/chaklesh/custom_loan.git"
